turbopack/crates/turbo-tasks-macros-tests/tests/function/fail_attribute_invalid_args.stderr
error: unexpected token, expected one of: "fs", "network", "resolved", "local_cells"
 --> tests/function/fail_attribute_invalid_args.rs:8:25
  |
8 | #[turbo_tasks::function(invalid_argument)]
  |                         ^^^^^^^^^^^^^^^^
